Updated rows for bootstrap library. (ODAEU-257)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ChannelDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ChannelDashboards.html
@@ -19,6 +19,8 @@
                 <div class="span7">
                     <h3 wicket:id="channel"/>
                 </div>
+            </div>
+            <div class="row">
                 <div class="span10 offset1">
                     <div class="box">
                         <div class="box-header">
@@ -62,6 +64,8 @@
                         </table>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <br/>
                 <div class="span10 offset1">
                     <div class="box">
