--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsImplementationStatusDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsImplementationStatusDashboards.html
@@ -16,7 +16,6 @@
         <div class="container">
             <div class="row">
                 <br/>
-
                 <div class="span8 offset2">
                     <div class="box">
                         <div class="box-header">
@@ -55,6 +54,8 @@
                         </table>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <br/><br/>
                 <div class="span8 offset2">
                     <div class="box">
