--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/TypeOfAidDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/TypeOfAidDashboards.html
@@ -19,6 +19,8 @@
                 <div class="span7">
                     <h3 wicket:id="typeOfAid"/>
                 </div>
+            </div>
+            <div class="row">
                 <div class="span6">
                     <div class="box">
                         <div class="box-header">
@@ -39,6 +41,8 @@
                         <div wicket:id="typeOfAidBarChart"/>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <br/>
                 <div class="span10 offset1">
                     <div class="box">
