--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CountryDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CountryDashboards.html
@@ -19,6 +19,8 @@
                 <div class="span7">
                     <h3 wicket:id="country"/>
                 </div>
+            </div>
+            <div class="row">
                 <div class="span6">
                     <div class="box">
                         <div class="box-header">
@@ -59,6 +61,8 @@
                         <div wicket:id="countryChart"/>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <br/>
                 <div class="span10 offset1">
                     <div class="box">
