--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/InstitutionDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/InstitutionDashboards.html
@@ -19,7 +19,8 @@
                 <div class="span7">
                     <h3 wicket:id="institution"/>
                 </div>
-
+            </div>
+            <div class="row">
                 <div class="span8 offset2">
                     <div class="box">
                         <div class="box-header">
@@ -54,6 +55,8 @@
                         </table>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="span6">
                     <div class="box">
                         <div class="box-header">
@@ -74,6 +77,8 @@
                         <div wicket:id="institutionBarChart"/>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <br/>
                 <div class="span10 offset1">
                     <div class="box">
@@ -118,6 +123,8 @@
                         </table>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <br/>
                 <div class="span8 offset2">
                     <div class="box">
