--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfAidDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsInstitutionTypeOfAidDashboards.html
@@ -16,7 +16,6 @@
         <div class="container">
             <div class="row">
                 <br/>
-
                 <div class="span6">
                     <div class="box">
                         <div class="box-header">
@@ -90,7 +89,7 @@
                         </table>
                     </div>
                 </div>
-                <br/><br/>
+
                 <div class="span6">
                     <div class="box">
                         <div class="box-header">
@@ -101,7 +100,8 @@
                         <div wicket:id="typeOfAidChart"/>
                     </div>
                 </div>
-
+            </div>
+            <div class="row">
                 <div class="span6 offset3">
                     <div class="box">
                         <div class="box-header">
