--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
@@ -28,7 +28,8 @@
                 <div class="span6">
                     <i class="oda-legend" wicket:id="legend"></i>
                 </div>
-
+            </div>
+            <div class="row">
                 <div class="span7">
                     <div class="box">
                         <div class="box-header">
@@ -67,7 +68,8 @@
                         <div wicket:id="odaByIncomeGroupChart"/>
                     </div>
                 </div>
-
+            </div>
+            <div class="row">
                 <div class="span6">
                     <div class="box">
                         <div class="box-header">
@@ -124,7 +126,8 @@
                         <div wicket:id="odaByRegionChart"/>
                     </div>
                 </div>
-
+            </div>
+            <div class="row">
                 <div class="span12">
                     <br/>
                     <div class="box">
