--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/SectorDashboards.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/SectorDashboards.html
@@ -19,6 +19,8 @@
                 <div class="span7">
                     <h3 wicket:id="sector"/>
                 </div>
+            </div>
+            <div class="row">
                 <div class="span8 offset2">
                     <div class="box">
                         <div class="box-header">
@@ -48,6 +50,8 @@
                         </table>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="span6">
                     <div class="box">
                         <div class="box-header">
@@ -68,6 +72,8 @@
                         <div wicket:id="sectorBarChart"/>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <br/>
                 <div class="span10 offset1">
                     <div class="box">
