ODAEU-290 Second round of fixes/improvements

--- a/eudevfin/saikuui/src/main/webapp/saikuui/index.html
+++ b/eudevfin/saikuui/src/main/webapp/saikuui/index.html
@@ -154,7 +154,7 @@
         </script>
 
         <script type="text/x-jquery-tmpl" id="template-toolbar-eudevfin">
-                <h1><a href='/' title='EUDEVFIN' style="text-decoration:none;color:#777777;font-size:20px;padding-left:10px;">EU-DEVFIN</a></h1>
+                <h1><a href='/' title='EUDEVFIN' style="text-decoration:none;color:#777777;font-size:20px;padding-left:10px;">EU-DEVFIN Report Builder</a></h1>
         </script>
 
 
