ODAEU-290 Third round of improvements for integration

--- a/eudevfin/saikuui/src/main/webapp/saikuui/index.html
+++ b/eudevfin/saikuui/src/main/webapp/saikuui/index.html
@@ -240,7 +240,7 @@
                     
                 </div>
                 <div id="query_processing" class="query_processing" style="display:none;"><span class="processing_image">&nbsp;&nbsp;</span> <span class="i18n">Running query...</span>  [&nbsp;<a class="cancel i18n" href="#cancel">Cancel</a>&nbsp;]</div>
-
+                <div class="workspace_help" style="padding-left:20px;">*If there are no measures selected, the measure shown by default is "Extended"</div>
                 <div class="workspace_results_info" align="right" />
                 <div class="workspace_results">
                 </div>
@@ -260,7 +260,7 @@
             </div>
             <h3 class="i18n">Dimensions</h3>
             <div class="sidebar_inner dimension_tree"></div>
-            <h3 class="i18n">Measures</h3>
+            <h3 class="i18n">Measures *</h3>
             <div class="sidebar_inner measure_tree"></div>
         </div>
         
