Added isInverted option to exchange rate page. (ODAEU-164)

--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditHistoricalExchangeRatePage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditHistoricalExchangeRatePage.html
@@ -28,6 +28,7 @@
                         <div wicket:id="date"/>
                         <div wicket:id="rate"/>
                         <div wicket:id="source"/>
+                        <div wicket:id="isInverted"/>
                     </div>
                     <div class="row">
                         <div class="span4">
