--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/AggregateTransactionsPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/AggregateTransactionsPage.html
@@ -10,19 +10,23 @@
   ~    aartimon
   -->
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:wicket="http://wicket.apache.org">
 <head>
 </head>
 <body>
-<wicket:extend>
-	<div class="container">
-		<div class="row">
-			<wicket:message key="message"/><br/>
+	<wicket:extend>
+		<div class="container">
+			<div class="row"></div>
+			<div class="row">
+				<div class="span10 offset1 well">
+					<wicket:message key="message" />
+					<p />
+					<div wicket:id="search-box-panel" />
+
+				</div>
+			</div>
 		</div>
-		<div class="row">
-			<div class="span10 offset1 well" wicket:id="search-box-panel"></div>
-		</div>
-	</div>
-</wicket:extend>
+	</wicket:extend>
 </body>
 </html>
