ODAEU-281 - added warning on reuse page

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/ReuseTransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/ReuseTransactionPage.html
@@ -16,6 +16,7 @@
             <div class="span10 offset1 well">
             <div class="content" align="center">
                 <form wicket:id="form">
+                			<b><wicket:message key="warning"/></b><p/>
                 			<wicket:message key="message"/><br/>
                     		<div wicket:id="formType"/>
                             <input wicket:id="submit" type="button"/>
