Added forgot password link. (ODAEU-193)

--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/LoginPage.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/LoginPage.html
@@ -34,6 +34,8 @@
                         <div wicket:id="username"/>
                         <div wicket:id="password"/>
                         <br/>
+                        <a wicket:id="forgotPasswordLink"/>
+                        <br/><br/>
                         <input wicket:id="submit" type="submit" class="btn btn-primary btn-block"/>                        
                     </form>
                 </div>
