Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,54 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>EU-DEVFIN by devgateway</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="EU-DEVFIN : EU-DEVFIN" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>EU-DEVFIN</title>
   </head>
+
   <body>
 
-      <header>
-        <h1>EU-DEVFIN</h1>
-        <p>EU-DEVFIN</p>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/devgateway/eudevfin">View on GitHub</a>
 
-      <div id="banner">
-        <span id="logo"></span>
+          <h1 id="project_title">EU-DEVFIN</h1>
+          <h2 id="project_tagline">EU-DEVFIN</h2>
 
-        <a href="https://github.com/devgateway/eudevfin" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/devgateway/eudevfin/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/devgateway/eudevfin/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/devgateway/eudevfin/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/devgateway/eudevfin/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <p>Framework Contract EuropeAid/129783/C/SER/Multi Capacity-Building in the area of Development Cooperation Policy (Capacity Building Scheme VII 2013-2014).</p>
 
 <p>Enhancing the ODA reporting capacities and systems of EU Member States.</p>
       </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/devgateway">devgateway</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">EU-DEVFIN maintained by <a href="https://github.com/devgateway">devgateway</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
+
   </body>
 </html>
