Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
 <p>Enhancing the ODA reporting capacities and systems of EU Member States.</p>
 
-<div class="highlight highlight-html"><pre><span class="nt">&lt;iframe</span> <span class="na">src=</span><span class="s">"http://prezi.com/embed/tkb3beqkcdx1/?bgcolor=ffffff&amp;amp;lock_to_path=0&amp;amp;autoplay=0&amp;amp;autohide_ctrls=0&amp;amp;features=undefined&amp;amp;disabled_features=undefined"</span> <span class="na">width=</span><span class="s">"550"</span> <span class="na">height=</span><span class="s">"400"</span> <span class="na">frameBorder=</span><span class="s">"0"</span> <span class="na">webkitAllowFullScreen</span> <span class="na">mozAllowFullscreen</span> <span class="na">allowfullscreen</span><span class="nt">&gt;&lt;/iframe&gt;</span>
-</pre></div>
+<p><a href="http://prezi.com/tkb3beqkcdx1/?utm_campaign=share&amp;utm_medium=copy&amp;rc=ex0share">Project Presentation</a></p>
       </section>
     </div>
 
