ODAEU-235 Loading the years based on the existing data

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsExport.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsExport.html
@@ -31,12 +31,7 @@
 					<div class="control-group">
 						<label class="control-label" for="reportYear">Report Year</label>
 						<div class="controls">
-							<select id="reportYear" name="reportYear" class="span3">
-								<option value="2010">2010</option>
-								<option value="2011">2011</option>
-								<option value="2012">2012</option>
-								<option value="2013">2013</option>
-							</select>
+                            <select wicket:id="reportYear" class="span3"></select>
 						</div>
 					</div>
 					<div class="control-group">
