--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditOrganizationPage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditOrganizationPage.html
@@ -24,6 +24,7 @@
                     <div class="row">
                         <div class="span4">
                             <input wicket:id="submit" type="button"/>
+							<input wicket:id="delete" type="button"/>
                             <input wicket:id="cancel" type="button"/>
                         </div>
                     </div>
