ODAEU-305 - adding the possibility to send to more than one recipient + adding db patch for the change                     - implementing reply to all functionality                     - improving user dropdown search - adding filtering functionality to it - now search will filter by firstName/lastName/email/phone/username                     - improving display of users in the search dropdown + from/to fields

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/MessagesListTable.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/MessagesListTable.html
@@ -36,6 +36,9 @@
                 <span class="pull-right"><span style="color: #888888; font-size: 12px;" wicket:id="date"/></span>
             </div>
             <div>
+                <span class=""><strong>To:</strong> <span wicket:id="to"/></span>
+            </div>
+            <div>
                 <span class=""><strong>Subject:</strong> <span wicket:id="subject"/> </span>
             </div>
             <div>
