--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
@@ -13,8 +13,9 @@
 
    
     <div class="container">
-    
-        <div class="row">
+    	<div class="note alert alert-error" wicket:id="note"></div>
+    	<br/>
+        <div class="row">	
             <div class="span10 offset1">
                 <form wicket:id="form">
                     <div class="row">
