--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsExport.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsExport.html
@@ -45,6 +45,12 @@
 							</select>
 						</div>
 					</div>
+					<div class="control-group" wicket:id="dataSourceGroup">
+						<label class="control-label" for="dataSource">Data Source</label>
+						<div class="controls">
+							 <select wicket:id="dataSource" class="span3"></select>
+						</div>
+					</div>
 				    <div class="form-actions">
 						<button type="submit" class="btn btn-large btn-primary">Export</button>
 					</div>
