--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/BasicDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/BasicDataTab.html
@@ -17,7 +17,8 @@
     </div>
 
     <div class="row">
-        <div wicket:id="8channelDelivery"/>        
+        <div wicket:id="8channelInstitutionName"/>        
+        <div wicket:id="9channelOfDelivery"/>        
         <div wicket:id="10bilateralMultilateral"/>
         <div wicket:id="11typeOfFlow"/>
         <div wicket:id="12typeOfFinance"/>
