--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/SystemMaintenance.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/SystemMaintenance.html
@@ -34,6 +34,7 @@
                     <div wicket:id="feedback" />
                     <div wicket:id="baseurl"/>
                     <div wicket:id="key"/>
+                    <div wicket:id="jobActive"/>
                     <div class="span4">
                         <input wicket:id="submit" type="submit" class="btn btn-primary"/>
                     </div>
