ODAEU-308 Added link and additional message

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
@@ -13,7 +13,9 @@
 
    
     <div class="container">
-    	<div class="note alert alert-error" wicket:id="note"></div>
+    	<div class="note alert alert-warning" wicket:id="note"></div>
+    	<br/>
+    	<div class="subnote alert alert-error" wicket:id="subnote"></div>
     	<br/>
         <div class="row">	
             <div class="span10 offset1">
