ODAEU-314 - implement file upload form in Messages + possibility of storing multiple files inside messages                     - hide attachments line when there are none

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/Messages.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/Messages.html
@@ -27,7 +27,10 @@
                         <span wicket:id="message"/>
                     </div>
                     <div class="row">
-                        <div class="span10">
+                        <span wicket:id="attachments"/>
+                    </div>
+                    <div class="row">
+                    <div class="span10">
                             <input wicket:id="send" type="button"/>
                         </div>
                     </div>
