--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/MessagesListTable.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/MessagesListTable.html
@@ -44,7 +44,9 @@
             <div>
                 <span wicket:id="message"/>
             </div>
-            <div>
+            <div wicket:id="attachments">
+                <span class=""><strong>Attachments:</strong> <span style="margin-left: 5px;" wicket:id="list"><span
+                        wicket:id="label"/><i style="cursor: pointer;" wicket:id="download"/></span></span>
             </div>
         </td>
     </tr>
