Minor changes to publish report feature. (ODAEU-218)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsExport.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsExport.html
@@ -24,6 +24,9 @@
 <wicket:extend>
 	<div class="container">
 		<div class="row">
+            <div align="center">
+                <h4 wicket:id="subtitleReportsExport"/>
+            </div>
 			<br/><br/>
 			<div class="span6 offset3">
 				<form class="form-horizontal" action="jasperreports/generate" method="post" onsubmit="target_popup(this)">
