ODAEU-293 - tutorials - videos + FAQ+emanual

--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HelpPage.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HelpPage.html
@@ -10,14 +10,62 @@
   ~    aartimon
   -->
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:wicket="http://wicket.apache.org">
 <body>
-    <wicket:extend>
+	<wicket:extend>
 
 		<div class="container">
 			<div class="row">
-				<div class="span4 offset4 well">
-					<wicket:message key="message" />
+				<div class="span4 offset2">
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/q8qMHqFPH40" frameborder="0"
+						allowfullscreen></iframe>
+					<p />
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/aY9D8nwpR1s" frameborder="0"
+						allowfullscreen></iframe>
+					<p />
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/TL-gn1lsLlg" frameborder="0"
+						allowfullscreen></iframe>
+
+					<p />
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/U1bDOkc8FVs" frameborder="0"
+						allowfullscreen></iframe>
+
+					<p />
+
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/wU40uvTWp-4" frameborder="0"
+						allowfullscreen></iframe>
+
+					<p />
+
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/qWmcZlQcoos" frameborder="0"
+						allowfullscreen></iframe>
+
+					<p />
+
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/7ULPwUKA53U" frameborder="0"
+						allowfullscreen></iframe>
+
+					<p />
+
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/Pe1nW-10Jfs" frameborder="0"
+						allowfullscreen></iframe>
+
+					<p />
+
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/UPLZ3nt7y2s" frameborder="0"
+						allowfullscreen></iframe>
+						
+					<p/>
 				</div>
 			</div>
 		</div>
