ODAEU-293 - added titles to all videos

--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HelpPage.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HelpPage.html
@@ -17,55 +17,77 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="span4 offset2">
+				<div class="offset2">
+					<h4>
+						<wicket:message key="tutorial1" />
+					</h4>
 					<iframe width="560" height="315"
-						src="//www.youtube.com/embed/q8qMHqFPH40" frameborder="0"
-						allowfullscreen></iframe>
+						src="//www.youtube.com/embed/q8qMHqFPH40?rel=0&showinfo=0"
+						frameborder="0" showinfo="1" allowfullscreen></iframe>
 					<p />
+					<h4>
+						<wicket:message key="tutorial2" />
+					</h4>
 					<iframe width="560" height="315"
-						src="//www.youtube.com/embed/aY9D8nwpR1s" frameborder="0"
-						allowfullscreen></iframe>
+						src="//www.youtube.com/embed/aY9D8nwpR1s?rel=0&showinfo=0"
+						frameborder="0" allowfullscreen></iframe>
 					<p />
+					<h4>
+						<wicket:message key="tutorial3" />
+					</h4>
 					<iframe width="560" height="315"
-						src="//www.youtube.com/embed/TL-gn1lsLlg" frameborder="0"
-						allowfullscreen></iframe>
-
-					<p />
-					<iframe width="560" height="315"
-						src="//www.youtube.com/embed/U1bDOkc8FVs" frameborder="0"
-						allowfullscreen></iframe>
-
-					<p />
-
-					<iframe width="560" height="315"
-						src="//www.youtube.com/embed/wU40uvTWp-4" frameborder="0"
-						allowfullscreen></iframe>
+						src="//www.youtube.com/embed/TL-gn1lsLlg?rel=0&showinfo=0"
+						frameborder="0" allowfullscreen></iframe>
 
 					<p />
-
+					<h4>
+						<wicket:message key="tutorial4" />
+					</h4>
 					<iframe width="560" height="315"
-						src="//www.youtube.com/embed/qWmcZlQcoos" frameborder="0"
-						allowfullscreen></iframe>
+						src="//www.youtube.com/embed/U1bDOkc8FVs?rel=0&showinfo=0"
+						frameborder="0" allowfullscreen></iframe>
 
 					<p />
-
+					<h4>
+						<wicket:message key="tutorial5" />
+					</h4>
 					<iframe width="560" height="315"
-						src="//www.youtube.com/embed/7ULPwUKA53U" frameborder="0"
-						allowfullscreen></iframe>
+						src="//www.youtube.com/embed/wU40uvTWp-4?rel=0&showinfo=0"
+						frameborder="0" allowfullscreen></iframe>
 
 					<p />
-
+					<h4>
+						<wicket:message key="tutorial6" />
+					</h4>
 					<iframe width="560" height="315"
-						src="//www.youtube.com/embed/Pe1nW-10Jfs" frameborder="0"
-						allowfullscreen></iframe>
+						src="//www.youtube.com/embed/qWmcZlQcoos?rel=0&showinfo=0"
+						frameborder="0" allowfullscreen></iframe>
 
 					<p />
-
+					<h4>
+						<wicket:message key="tutorial7" />
+					</h4>
 					<iframe width="560" height="315"
-						src="//www.youtube.com/embed/UPLZ3nt7y2s" frameborder="0"
-						allowfullscreen></iframe>
-						
-					<p/>
+						src="//www.youtube.com/embed/7ULPwUKA53U?rel=0&showinfo=0"
+						frameborder="0" allowfullscreen></iframe>
+
+					<p />
+					<h4>
+						<wicket:message key="tutorial8" />
+					</h4>
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/Pe1nW-10Jfs?rel=0&showinfo=0"
+						frameborder="0" allowfullscreen></iframe>
+
+					<p />
+					<h4>
+						<wicket:message key="tutorial9" />
+					</h4>
+					<iframe width="560" height="315"
+						src="//www.youtube.com/embed/UPLZ3nt7y2s?rel=0&showinfo=0"
+						frameborder="0" allowfullscreen></iframe>
+
+					<p />
 				</div>
 			</div>
 		</div>
