--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
@@ -22,11 +22,11 @@
 </head>
 <body>
 <div id="wrapper">
-    <div class="container">
+    <div class="container-fluid">
         <div wicket:id="navbar"/>
     </div>	
 
-    <div id="content" class="container">
+    <div id="content" class="container-fluid">
    
         <p/>
         <div class="row">
